@@ -14,10 +14,10 @@ index cf76412e2b..c21c8f2bf4 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 18c56118ac..3564b717e2 100644
+index 2333e9a39d..460f1dfff5 100644
 --- a/Changes
 +++ b/Changes
-@@ -733,11 +733,6 @@ OCaml 5.0
+@@ -737,11 +737,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 18c56118ac..3564b717e2 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -757,6 +752,26 @@ OCaml 5.0
+@@ -761,6 +756,26 @@ OCaml 5.0
    the bug was only present in development version of OCaml 5.
    (Stephen Dolan, report by Andre Maroneze, review by Gabriel Scherer)
  
@@ -56,7 +56,7 @@ index 18c56118ac..3564b717e2 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -792,13 +807,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -796,13 +811,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -72,7 +72,7 @@ index 18c56118ac..3564b717e2 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -905,6 +920,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -909,6 +924,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -82,7 +82,7 @@ index 18c56118ac..3564b717e2 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1164,6 +1182,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1168,6 +1186,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10065,7 +10065,7 @@ index 0000000000..9f3136a531
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..0868a0f3ac
+index 0000000000..77bc9b67d7
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10004 @@
@@ -10085,10 +10085,10 @@ index 0000000000..0868a0f3ac
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 18c56118ac..3564b717e2 100644
++index 2333e9a39d..460f1dfff5 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -733,11 +733,6 @@ OCaml 5.0
++@@ -737,11 +737,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10100,7 +10100,7 @@ index 0000000000..0868a0f3ac
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -757,6 +752,26 @@ OCaml 5.0
++@@ -761,6 +756,26 @@ OCaml 5.0
 +   the bug was only present in development version of OCaml 5.
 +   (Stephen Dolan, report by Andre Maroneze, review by Gabriel Scherer)
 + 
@@ -10127,7 +10127,7 @@ index 0000000000..0868a0f3ac
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -792,13 +807,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -796,13 +811,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10143,7 +10143,7 @@ index 0000000000..0868a0f3ac
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -905,6 +920,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -909,6 +924,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10153,7 +10153,7 @@ index 0000000000..0868a0f3ac
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1164,6 +1182,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1168,6 +1186,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
